# hudascraper

./: .gitignore  LICENSE  NOTES.md  README.md  config-aker-weld-manager.json  config-sample.json  config-template.json  config-testsite-ms.json  hudasconfig.py  hudascraper.py  hudascraper_app.py  hudascraper_cli.py  hudascraper_web.py  hudasession.py  mkdocs.yml  pyproject.toml  pytest.ini  selectors-sample.json  selectors-template.json
.archive/agentic-hudas/: app.py
.archive/agentic-hudas/.streamlit/: config.toml
.archive/agentic-hudas/agent/: llm_agent.py  tools.py
.archive/agentic-hudas/data/: storage.py
.archive/agentic-hudas/docs/: component-agentic-hudas.puml  sequence-agentic-hudas.puml
.archive/agentic-hudas/infra/: ollama_health.py
.archive/agentic-hudas/scraping/: config.py  extractor.py
.archive/agentic-hudas/state/: session.py
.archive/agentic-hudas/styles/: theme.css
.archive/agentic-hudas/ui/: chat.py  layout.py  left_menu.py  ollama_panel.py  quick_actions.py
.archive/agentic-hudas/ui/components/: message.py
docs/: LOGIN.md  NOTES.md  USAGE.md  api.md  index.md
hudascraper/: __init__.py  hudasconfig.py  hudascraper.py  hudasession.py
hudascraper/web/: __init__.py  hudascraper_api.py  hudascraper_log.py  hudascraper_mgr.py  hudascraper_wsr.py
scripts/: rename_run_dirs.py
test-site/: README.md  index.html  ms-login.html  success.html
tests/: __init__.py  test_ms_sso.py  test_ms_sso_flow.py  test_ms_sso_integration.py  test_public_site_table.py  test_scrape_sample.py  test_web_app.py
