[project]
name = "hudascraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "msal>=1.33.0",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
]
